# codex

./: .bazelrc  .gitattributes  .gitignore  defs.bzl
.github/workflows/: bazel.yml
codex-rs/: Cargo.toml  rust-toolchain.toml
codex-rs/.cargo/: config.toml
codex-rs/app-server/: Cargo.toml  README.md
codex-rs/app-server-protocol/schema/json/: codex_app_server_protocol.schemas.json
codex-rs/app-server-protocol/schema/typescript/v2/: index.ts
codex-rs/app-server-protocol/src/: export.rs  schema_fixtures.rs
codex-rs/app-server-protocol/src/protocol/: common.rs  v2.rs
codex-rs/app-server/src/: codex_message_processor.rs  main.rs  message_processor.rs
codex-rs/app-server/tests/common/: mcp_process.rs
codex-rs/app-server/tests/suite/: codex_message_processor_flow.rs
codex-rs/app-server/tests/suite/v2/: account.rs  collaboration_mode_list.rs  config_rpc.rs  turn_start.rs
codex-rs/backend-client/: Cargo.toml
codex-rs/cli/src/: main.rs
codex-rs/cloud-requirements/: Cargo.toml
codex-rs/cloud-tasks-client/: Cargo.toml
codex-rs/codex-api/src/sse/: responses.rs
codex-rs/codex-backend-openapi-models/: Cargo.toml
codex-rs/codex-experimental-api-macros/: Cargo.toml
codex-rs/collaboration-mode-templates/templates/: default.md
codex-rs/config/src/loader/: mod.rs
codex-rs/core/: Cargo.toml  config.schema.json  models.json
codex-rs/core-plugins/src/: startup_sync.rs
codex-rs/core-skills/src/: render.rs
codex-rs/core/src/: auth.rs  client.rs  codex.rs  connectors.rs  exec.rs  features.rs  mcp_connection_manager.rs  model_provider_info.rs  project_doc.rs  realtime_prompt.rs  text_encoding.rs
codex-rs/core/src/config/: mod.rs  service.rs  types.rs
codex-rs/core/src/config_loader/: mod.rs
codex-rs/core/src/mcp/: mod.rs
codex-rs/core/src/memories/: mod.rs
codex-rs/core/src/models_manager/: collaboration_mode_presets.rs  manager.rs
codex-rs/core/src/plugins/: curated_repo.rs  startup_sync.rs
codex-rs/core/src/skills/: render.rs
codex-rs/core/src/state/: session.rs  turn.rs
codex-rs/core/src/tools/: code_mode_runner.cjs  spec.rs  spec_plan.rs
codex-rs/core/src/tools/code_mode/: runner.cjs
codex-rs/core/src/tools/handlers/: multi_agents.rs  multi_agents_spec.rs  request_user_input.rs  shell.rs
codex-rs/core/templates/collaboration_mode/: agent.md
codex-rs/core/tests/suite/: client.rs  mod.rs  request_user_input.rs
codex-rs/exec-server/src/posix/: escalate_server.rs  mcp.rs
codex-rs/exec-server/tests/common/: lib.rs
codex-rs/execpolicy/src/: parser.rs
codex-rs/features/src/: lib.rs
codex-rs/feedback/: Cargo.toml
codex-rs/hooks/src/engine/: discovery.rs
codex-rs/linux-sandbox/: Cargo.toml
codex-rs/linux-sandbox/src/: landlock.rs  linux_run_main.rs
codex-rs/linux-sandbox/tests/suite/: landlock.rs
codex-rs/lmstudio/: Cargo.toml
codex-rs/models-manager/: models.json
codex-rs/models-manager/src/: manager.rs
codex-rs/network-proxy/: Cargo.toml
codex-rs/package-manager/src/: archive.rs
codex-rs/protocol/src/: config_types.rs
codex-rs/rmcp-client/: Cargo.toml
codex-rs/test-macros/: Cargo.toml
codex-rs/tools/src/: agent_tool.rs  tool_registry_plan.rs
codex-rs/tui/: Cargo.toml  prompt_for_init_command.md
codex-rs/tui/src/: app.rs  app_event.rs  chatwidget.rs  collaboration_modes.rs  history_cell.rs  lib.rs  markdown_render.rs
codex-rs/tui/src/bottom_pane/: chat_composer.rs  footer.rs
codex-rs/tui/src/bottom_pane/request_user_input/: mod.rs
codex-rs/tui/src/chatwidget/: tests.rs
codex-rs/tui/src/status/: card.rs
codex-rs/tui2/src/: insta_runfiles.rs
codex-rs/tui_app_server/: Cargo.toml
codex-rs/tui_app_server/src/: history_cell.rs
codex-rs/utils/cargo-bin/src/: lib.rs
codex-rs/utils/pty/: Cargo.toml
codex-rs/utils/sanitizer/: Cargo.toml
codex-rs/utils/sleep-inhibitor/: Cargo.toml
codex-rs/windows-sandbox-rs/: Cargo.toml
codex-rs/windows-sandbox-rs/src/: elevated_impl.rs  token.rs
scripts/: utm_windows_codex.sh
tmp/verify-992ceb5-20260312-131005/new/: pyproject.toml
tmp/verify-992ceb5-20260312-131005/new/algorithms/: __init__.py
tmp/verify-992ceb5-20260312-131005/new/algorithms/cuda/: adaptive_refinement.cuh  adaptive_sampling.cuh  adaptive_upscaling.cu
tmp/verify-992ceb5-20260312-131005/new/benchmark/: batches.py  milo_metric.py  reconstruction.py
tmp/verify-992ceb5-20260312-131005/new/common/: kernel_loader.py  runtime.py  tensors.py
tmp/verify-992ceb5-20260312-131005/new/common/resizing/: __init__.py  base.py  lanczos.py  separable.py  separable_kernels.py
tmp/verify-992ceb5-20260312-131005/new/common/resizing/cuda/: box_filter.cu  separable.cu
tmp/verify-992ceb5-20260312-131005/new_eval/: adaptive_reconstruction_milo_summary.csv
tmp/verify-992ceb5-20260312-131005/new_eval_32/: adaptive_reconstruction_milo_summary.csv
tmp/verify-992ceb5-20260312-131005/old/: run_evaluation.py
tmp/verify-992ceb5-20260312-131005/old/algorithms/: adaptive_core.py
tmp/verify-992ceb5-20260312-131005/old/algorithms/cuda/: adaptive_math.cuh  adaptive_refinement.cuh  adaptive_upscaling.cu
tmp/verify-992ceb5-20260312-131005/old/benchmark/: reporting.py  runner.py  scales.py
tmp/verify-992ceb5-20260312-131005/old/common/: __init__.py  config.py  images.py
tmp/verify-992ceb5-20260312-131005/old/common/resizing/: box_filter.py  plans.py
tmp/verify-992ceb5-20260312-131005/old_eval/: adaptive_reconstruction_milo_summary.csv
tmp/verify-992ceb5-20260312-131005/old_eval_32/: adaptive_reconstruction_milo_summary.csv
tmp/verify-992ceb5-20260312-131005/smoke_new/: adaptive_reconstruction_milo_summary.csv
tmp/verify-992ceb5-20260312-131005/tuned_eval_32/: adaptive_reconstruction_milo_summary.csv
tmp/verify-992ceb5-20260312-131005/tuned_eval_32_fingerprint/: adaptive_reconstruction_milo_summary.csv
