[workspace]
members = [
    "backend-client",
    "ansi-escape",
    "async-utils",
    "app-server",
    "app-server-protocol",
    "app-server-test-client",
    "debug-client",
    "apply-patch",
    "arg0",
    "feedback",
    "codex-backend-openapi-models",
    "cloud-tasks",
    "cloud-tasks-client",
    "cli",
    "common",
    "core",
    "exec",
    "exec-server",
    "execpolicy",
    "execpolicy-legacy",
    "keyring-store",
    "file-search",
    "linux-sandbox",
    "lmstudio",
    "login",
    "mcp-server",
    "mcp-types",
    "network-proxy",
    "ollama",
    "process-hardening",
    "protocol",
    "rmcp-client",
    "responses-api-proxy",
    "stdio-to-uds",
    "otel",
    "tui",
    "utils/absolute-path",
    "utils/cargo-bin",
    "utils/git",
    "utils/cache",
    "utils/image",
    "utils/json-to-toml",
    "utils/pty",
    "utils/readiness",
    "utils/string",
    "codex-client",
    "codex-api",
]
resolver = "2"

[workspace.package]
version = "999.999.999"
# Track the edition for all workspace crates in one place. Individual
# crates can still override this value, but keeping it here means new
# crates created with `cargo new -w ...` automatically inherit the 2024
# edition.
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
# Internal
app_test_support = { path = "app-server/tests/common" }
codex-ansi-escape = { path = "ansi-escape" }
codex-api = { path = "codex-api" }
codex-app-server = { path = "app-server" }
codex-app-server-protocol = { path = "app-server-protocol" }
codex-apply-patch = { path = "apply-patch" }
codex-arg0 = { path = "arg0" }
codex-async-utils = { path = "async-utils" }
codex-backend-client = { path = "backend-client" }
codex-chatgpt = { path = "chatgpt" }
codex-cli = { path = "cli" }
codex-client = { path = "codex-client" }
codex-common = { path = "common" }
codex-core = { path = "core" }
codex-exec = { path = "exec" }
codex-execpolicy = { path = "execpolicy" }
codex-feedback = { path = "feedback" }
codex-file-search = { path = "file-search" }
codex-git = { path = "utils/git" }
codex-keyring-store = { path = "keyring-store" }
codex-linux-sandbox = { path = "linux-sandbox" }
codex-lmstudio = { path = "lmstudio" }
codex-login = { path = "login" }
codex-mcp-server = { path = "mcp-server" }
codex-ollama = { path = "ollama" }
codex-otel = { path = "otel" }
codex-process-hardening = { path = "process-hardening" }
codex-protocol = { path = "protocol" }
codex-responses-api-proxy = { path = "responses-api-proxy" }
codex-rmcp-client = { path = "rmcp-client" }
codex-stdio-to-uds = { path = "stdio-to-uds" }
codex-tui = { path = "tui" }
codex-utils-absolute-path = { path = "utils/absolute-path" }
codex-utils-cache = { path = "utils/cache" }
codex-utils-cargo-bin = { path = "utils/cargo-bin" }
codex-utils-image = { path = "utils/image" }
codex-utils-json-to-toml = { path = "utils/json-to-toml" }
codex-utils-pty = { path = "utils/pty" }
codex-utils-readiness = { path = "utils/readiness" }
codex-utils-string = { path = "utils/string" }
codex-windows-sandbox = { path = "windows-sandbox-rs" }
core_test_support = { path = "core/tests/common" }
exec_server_test_support = { path = "exec-server/tests/common" }
mcp-types = { path = "mcp-types" }
mcp_test_support = { path = "mcp-server/tests/common" }

# External
allocative = "*"
ansi-to-tui = "*"
anyhow = "*"
arboard = { version = "*", features = ["wayland-data-control"] }
assert_cmd = "*"
assert_matches = "*"
async-channel = "*"
async-stream = "*"
async-trait = "*"
axum = { version = "*", default-features = false }
base64 = "*"
bytes = "*"
chardetng = "*"
chrono = "*"
clap = "*"
clap_complete = "*"
color-eyre = "*"
crossterm = "*"
ctor = "*"
derive_more = "*"
diffy = "*"
dirs = "*"
dotenvy = "*"
dunce = "*"
encoding_rs = "*"
env-flags = "*"
env_logger = "*"
eventsource-stream = "*"
futures = { version = "*", default-features = false }
globset = "*"
http = "*"
icu_decimal = "*"
icu_locale_core = "*"
icu_provider = { version = "*", features = ["sync"] }
ignore = "*"
image = { version = "*", default-features = false }
include_dir = "*"
indexmap = "*"
indoc = "*"
insta = "*"
itertools = "*"
keyring = { version = "*", default-features = false }
landlock = "*"
lazy_static = "*"
libc = "*"
log = "*"
lru = "*"
maplit = "*"
mime_guess = "*"
multimap = "*"
notify = "*"
nucleo-matcher = "*"
once_cell = "*"
openssl-sys = "*"
opentelemetry = "*"
opentelemetry-appender-tracing = "*"
opentelemetry-otlp = "*"
opentelemetry-semantic-conventions = "*"
opentelemetry_sdk = "*"
os_info = "*"
owo-colors = "*"
path-absolutize = "*"
pathdiff = "*"
portable-pty = "*"
predicates = "*"
pretty_assertions = "*"
pulldown-cmark = "*"
rand = "*"
ratatui = "*"
ratatui-macros = "*"
regex = "*"
regex-lite = "*"
reqwest = "*"
rmcp = { version = "*", default-features = false }
schemars = "0.8"
seccompiler = "*"
semver = "*"
sentry = "*"
serde = "*"
serde_json = "*"
serde_path_to_error = "*"
serde_with = "*"
serde_yaml = "*"
serial_test = "*"
sha1 = "*"
sha2 = "*"
shlex = "*"
similar = "*"
socket2 = "*"
starlark = "*"
strum = "*"
strum_macros = "*"
supports-color = "*"
sys-locale = "*"
tempfile = "*"
test-log = "*"
textwrap = "*"
thiserror = "*"
time = "*"
tiny_http = "*"
tokio = "*"
tokio-stream = "*"
tokio-test = "*"
tokio-tungstenite = { version = "0.28.0", features = [
    "proxy",
    "rustls-tls-native-roots",
] }
tokio-util = "*"
toml = "*"
toml_edit = "*"
tracing = "*"
tracing-appender = "*"
tracing-opentelemetry = "*"
tracing-subscriber = "*"
tracing-test = "*"
tree-sitter = "*"
tree-sitter-bash = "*"
tree-sitter-highlight = "*"
ts-rs = "*"
uds_windows = "*"
unicode-segmentation = "*"
unicode-width = "*"
url = "*"
urlencoding = "*"
uuid = "*"
vt100 = "*"
walkdir = "*"
webbrowser = "*"
which = "*"
wildmatch = "*"
zstd = "*"

wiremock = "*"
zeroize = "*"

[workspace.lints]

[workspace.lints.clippy]

# cargo-shear cannot see the platform-specific openssl-sys usage, so we
# silence the false positive here instead of deleting a real dependency.
[workspace.metadata.cargo-shear]
ignored = ["icu_provider", "openssl-sys", "codex-utils-readiness"]

[profile.release]
panic = "abort"
lto = "fat"
# Because we bundle some of these executables with the TypeScript CLI, we
# remove everything to make the binary as small as possible.
strip = "symbols"

# See https://github.com/openai/codex/issues/1411 for details.
codegen-units = 1

[profile.ci-test]
debug = 1         # Reduce debug symbol size
inherits = "test"
opt-level = 0

[patch.crates-io]
# Uncomment to debug local changes.
# ratatui = { path = "../../ratatui" }
crossterm = { git = "https://github.com/nornagon/crossterm", branch = "nornagon/color-query" }
tokio-tungstenite = { git = "https://github.com/JakkuSakura/tokio-tungstenite", rev = "2ae536b0de793f3ddf31fc2f22d445bf1ef2023d" }

# Uncomment to debug local changes.
# rmcp = { path = "../../rust-sdk/crates/rmcp" }

[patch."ssh://git@github.com/JakkuSakura/tungstenite-rs.git"]
tungstenite = { git = "https://github.com/JakkuSakura/tungstenite-rs", rev = "f514de8644821113e5d18a027d6d28a5c8cc0a6e" }
