[workspace]
members = [
    "aws-auth",
    "analytics",
    "agent-identity",
    "backend-client",
    "ansi-escape",
    "async-utils",
    "app-server",
    "app-server-client",
    "app-server-protocol",
    "app-server-test-client",
    "debug-client",
    "apply-patch",
    "arg0",
    "feedback",
    "features",
    "install-context",
    "codex-backend-openapi-models",
    "code-mode",
    "cloud-requirements",
    "cloud-tasks",
    "cloud-tasks-client",
    "cloud-tasks-mock-client",
    "cli",
    "collaboration-mode-templates",
    "connectors",
    "config",
    "device-key",
    "shell-command",
    "shell-escalation",
    "skills",
    "core",
    "core-plugins",
    "core-skills",
    "hooks",
    "secrets",
    "exec",
    "file-system",
    "exec-server",
    "execpolicy",
    "execpolicy-legacy",
    "external-agent-sessions",
    "keyring-store",
    "file-search",
    "linux-sandbox",
    "lmstudio",
    "login",
    "codex-mcp",
    "mcp-server",
    "memories/read",
    "memories/write",
    "model-provider-info",
    "models-manager",
    "network-proxy",
    "ollama",
    "process-hardening",
    "protocol",
    "realtime-webrtc",
    "rollout",
    "rollout-trace",
    "rmcp-client",
    "responses-api-proxy",
    "response-debug-context",
    "sandboxing",
    "stdio-to-uds",
    "otel",
    "tui",
    "tools",
    "v8-poc",
    "utils/absolute-path",
    "utils/cargo-bin",
    "git-utils",
    "utils/cache",
    "utils/image",
    "utils/json-to-toml",
    "utils/home-dir",
    "utils/pty",
    "utils/readiness",
    "utils/rustls-provider",
    "utils/string",
    "utils/cli",
    "utils/elapsed",
    "utils/sandbox-summary",
    "utils/sleep-inhibitor",
    "utils/approval-presets",
    "utils/oss",
    "utils/output-truncation",
    "utils/path-utils",
    "utils/plugins",
    "utils/fuzzy-match",
    "utils/stream-parser",
    "utils/template",
    "codex-client",
    "codex-api",
    "state",
    "terminal-detection",
    "test-binary-support",
    "thread-store",
    "uds",
    "codex-experimental-api-macros",
    "plugin",
    "model-provider",
]
resolver = "2"

[workspace.package]
version = "99.99.99"
# Track the edition for all workspace crates in one place. Individual
# crates can still override this value, but keeping it here means new
# crates created with `cargo new -w ...` automatically inherit the 2024
# edition.
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
# Internal
app_test_support = { path = "app-server/tests/common" }
codex-analytics = { path = "analytics" }
codex-agent-identity = { path = "agent-identity" }
codex-ansi-escape = { path = "ansi-escape" }
codex-api = { path = "codex-api" }
codex-aws-auth = { path = "aws-auth" }
codex-app-server = { path = "app-server" }
codex-app-server-client = { path = "app-server-client" }
codex-app-server-protocol = { path = "app-server-protocol" }
codex-app-server-test-client = { path = "app-server-test-client" }
codex-apply-patch = { path = "apply-patch" }
codex-arg0 = { path = "arg0" }
codex-async-utils = { path = "async-utils" }
codex-backend-client = { path = "backend-client" }
codex-chatgpt = { path = "chatgpt" }
codex-cli = { path = "cli" }
codex-client = { path = "codex-client" }
codex-collaboration-mode-templates = { path = "collaboration-mode-templates" }
codex-cloud-requirements = { path = "cloud-requirements" }
codex-cloud-tasks-client = { path = "cloud-tasks-client" }
codex-cloud-tasks-mock-client = { path = "cloud-tasks-mock-client" }
codex-code-mode = { path = "code-mode" }
codex-config = { path = "config" }
codex-connectors = { path = "connectors" }
codex-core = { path = "core" }
codex-core-plugins = { path = "core-plugins" }
codex-core-skills = { path = "core-skills" }
codex-device-key = { path = "device-key" }
codex-exec = { path = "exec" }
codex-file-system = { path = "file-system" }
codex-exec-server = { path = "exec-server" }
codex-execpolicy = { path = "execpolicy" }
codex-external-agent-sessions = { path = "external-agent-sessions" }
codex-experimental-api-macros = { path = "codex-experimental-api-macros" }
codex-features = { path = "features" }
codex-feedback = { path = "feedback" }
codex-install-context = { path = "install-context" }
codex-file-search = { path = "file-search" }
codex-git-utils = { path = "git-utils" }
codex-hooks = { path = "hooks" }
codex-keyring-store = { path = "keyring-store" }
codex-linux-sandbox = { path = "linux-sandbox" }
codex-lmstudio = { path = "lmstudio" }
codex-login = { path = "login" }
codex-memories-read = { path = "memories/read" }
codex-memories-write = { path = "memories/write" }
codex-mcp = { path = "codex-mcp" }
codex-mcp-server = { path = "mcp-server" }
codex-model-provider-info = { path = "model-provider-info" }
codex-models-manager = { path = "models-manager" }
codex-network-proxy = { path = "network-proxy" }
codex-ollama = { path = "ollama" }
codex-otel = { path = "otel" }
codex-plugin = { path = "plugin" }
codex-model-provider = { path = "model-provider" }
codex-process-hardening = { path = "process-hardening" }
codex-protocol = { path = "protocol" }
codex-realtime-webrtc = { path = "realtime-webrtc" }
codex-responses-api-proxy = { path = "responses-api-proxy" }
codex-response-debug-context = { path = "response-debug-context" }
codex-rmcp-client = { path = "rmcp-client" }
codex-rollout = { path = "rollout" }
codex-rollout-trace = { path = "rollout-trace" }
codex-sandboxing = { path = "sandboxing" }
codex-secrets = { path = "secrets" }
codex-shell-command = { path = "shell-command" }
codex-shell-escalation = { path = "shell-escalation" }
codex-skills = { path = "skills" }
codex-state = { path = "state" }
codex-stdio-to-uds = { path = "stdio-to-uds" }
codex-terminal-detection = { path = "terminal-detection" }
codex-test-binary-support = { path = "test-binary-support" }
codex-thread-store = { path = "thread-store" }
codex-tools = { path = "tools" }
codex-tui = { path = "tui" }
codex-uds = { path = "uds" }
codex-utils-absolute-path = { path = "utils/absolute-path" }
codex-utils-approval-presets = { path = "utils/approval-presets" }
codex-utils-cache = { path = "utils/cache" }
codex-utils-cargo-bin = { path = "utils/cargo-bin" }
codex-utils-cli = { path = "utils/cli" }
codex-utils-elapsed = { path = "utils/elapsed" }
codex-utils-fuzzy-match = { path = "utils/fuzzy-match" }
codex-utils-home-dir = { path = "utils/home-dir" }
codex-utils-image = { path = "utils/image" }
codex-utils-json-to-toml = { path = "utils/json-to-toml" }
codex-utils-oss = { path = "utils/oss" }
codex-utils-output-truncation = { path = "utils/output-truncation" }
codex-utils-path = { path = "utils/path-utils" }
codex-utils-plugins = { path = "utils/plugins" }
codex-utils-pty = { path = "utils/pty" }
codex-utils-readiness = { path = "utils/readiness" }
codex-utils-rustls-provider = { path = "utils/rustls-provider" }
codex-utils-sandbox-summary = { path = "utils/sandbox-summary" }
codex-utils-sleep-inhibitor = { path = "utils/sleep-inhibitor" }
codex-utils-stream-parser = { path = "utils/stream-parser" }
codex-utils-string = { path = "utils/string" }
codex-utils-template = { path = "utils/template" }
codex-v8-poc = { path = "v8-poc" }
codex-windows-sandbox = { path = "windows-sandbox-rs" }
core_test_support = { path = "core/tests/common" }
mcp_test_support = { path = "mcp-server/tests/common" }

# External
age = "*"
allocative = "*"
ansi-to-tui = "7"
anyhow = "*"
arboard = { version = "*", features = ["wayland-data-control"] }
arc-swap = "*"
assert_cmd = "*"
assert_matches = "*"
async-channel = "*"
async-io = "*"
async-stream = "*"
async-trait = "*"
aws-config = "*"
aws-credential-types = "*"
aws-sigv4 = "*"
aws-types = "*"
axum = { version = "*", default-features = false }
base64 = "*"
bm25 = "*"
bytes = "*"
chardetng = "*"
chrono = "*"
clap = "*"
clap_complete = "*"
color-eyre = "*"
constant_time_eq = "*"
crossbeam-channel = "*"
crypto_box = { version = "*", features = ["seal"] }
crossterm = "0.28.1"
csv = "*"
ctor = "*"
deno_core_icudata = "*"
derive_more = "*"
diffy = "*"
dirs = "*"
dns-lookup = "*"
dotenvy = "*"
dunce = "*"
ed25519-dalek = { version = "*", features = ["pkcs8"] }
encoding_rs = "*"
env-flags = "*"
env_logger = "*"
eventsource-stream = "*"
flate2 = "*"
futures = { version = "*", default-features = false }
gethostname = "*"
gix = { version = "*", default-features = false, features = ["sha1"] }
glob = "*"
globset = "*"
hmac = "0.12"
http = "*"
iana-time-zone = "*"
icu_decimal = "=2.1.1"
icu_locale_core = "=2.1.1"
icu_provider = { version = "=2.1.1", features = ["sync"] }
ignore = "*"
image = { version = "*", default-features = false }
include_dir = "*"
indexmap = "*"
insta = "*"
inventory = "*"
itertools = "*"
jsonwebtoken = "*"
keyring = { version = "*", default-features = false }
landlock = "*"
lazy_static = "*"
libc = "*"
log = "*"
lru = "*"
maplit = "*"
mime_guess = "*"
multimap = "*"
notify = "*"
nucleo = { git = "https://github.com/helix-editor/nucleo.git" }
once_cell = "*"
openssl-sys = "*"
opentelemetry = "*"
opentelemetry-appender-tracing = "*"
opentelemetry-otlp = "*"
opentelemetry-semantic-conventions = "*"
opentelemetry_sdk = "*"
os_info = "*"
owo-colors = "*"
path-absolutize = "*"
pathdiff = "*"
p256 = "*"
portable-pty = "*"
predicates = "*"
pretty_assertions = "*"
pulldown-cmark = "*"
quick-xml = "*"
rand = "0.9"
ratatui = "0.29.0"
ratatui-macros = "0.6"
regex = "*"
regex-lite = "*"
reqwest = { version = "0.12", features = ["cookies"] }
rmcp = { version = "0.15", default-features = false }
runfiles = { git = "https://github.com/dzbarsky/rules_rust", rev = "b56cbaa8465e74127f1ea216f813cd377295ad81" }
rustls = { version = "*", default-features = false, features = ["ring", "std"] }
rustls-native-certs = "*"
rustls-pki-types = "*"
schemars = "0.8"
seccompiler = "*"
semver = "*"
sentry = "*"
serde = "*"
serde_json = "*"
serde_path_to_error = "*"
serde_with = "*"
serde_yaml = "*"
serial_test = "*"
sha1 = "0.10"
sha2 = "0.10"
shlex = "*"
similar = "*"
socket2 = "*"
sqlx = { version = "*", default-features = false, features = [
    "chrono",
    "json",
    "macros",
    "migrate",
    "runtime-tokio-rustls",
    "sqlite",
    "time",
    "uuid",
] }
starlark = "*"
strum = "*"
strum_macros = "*"
supports-color = "*"
syntect = "*"
sys-locale = "*"
tar = { version = "*", default-features = false }
tempfile = "*"
test-log = "*"
textwrap = "*"
thiserror = "*"
time = "*"
tiny_http = "*"
tokio = "*"
tokio-stream = "*"
tokio-test = "*"
tokio-tungstenite = { version = "0.28.0", features = [
    "proxy",
    "rustls-tls-native-roots",
] }
tokio-util = "*"
toml = "*"
toml_edit = "*"
tracing = "*"
tracing-appender = "*"
tracing-opentelemetry = "*"
tracing-subscriber = "*"
tracing-test = "*"
tonic = { version = "*", default-features = false, features = [
    "channel",
    "codegen",
] }
tonic-prost = "*"
tree-sitter = "*"
tree-sitter-bash = "*"
ts-rs = "*"
tungstenite = { version = "0.27.0", features = ["deflate", "proxy"] }
uds_windows = "*"
unicode-segmentation = "*"
unicode-width = "*"
url = "*"
urlencoding = "*"
uuid = "*"
v8 = "*"
vt100 = "*"
walkdir = "*"
webbrowser = "*"
which = "*"
whoami = "*"
wildmatch = "*"
winapi-util = "*"
zip = "*"
zstd = "*"

wiremock = "*"
zeroize = "*"

[workspace.lints]

[workspace.lints.clippy]

# cargo-shear cannot see the platform-specific openssl-sys usage, so we
# silence the false positive here instead of deleting a real dependency.
[workspace.metadata.cargo-shear]
ignored = [
    "icu_provider",
    "openssl-sys",
    "codex-utils-readiness",
    "codex-utils-template",
    "codex-v8-poc",
]

[profile.ci-test]
debug = 1         # Reduce debug symbol size
inherits = "test"
opt-level = 0

[patch.crates-io]
# Uncomment to debug local changes.
# ratatui = { path = "../../ratatui" }
tokio-tungstenite = { git = "https://github.com/openai-oss-forks/tokio-tungstenite", rev = "132f5b39c862e3a970f731d709608b3e6276d5f6" }
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }

# Uncomment to debug local changes.
# rmcp = { path = "../../rust-sdk/crates/rmcp" }

[patch."ssh://git@github.com/openai-oss-forks/tungstenite-rs.git"]
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }
