[package]
name = "codex-backend-client"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
reqwest = { version = "*", default-features = false, features = ["json", "rustls-tls"] }
codex-backend-openapi-models = { path = "../codex-backend-openapi-models" }
codex-protocol = { workspace = true }
codex-core = { workspace = true }

[dev-dependencies]
pretty_assertions = "*"
