[package]
name = "codex-backend-client"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
reqwest = { version = "*", default-features = false, features = ["json", "rustls-tls"] }
codex-backend-openapi-models = { path = "../codex-backend-openapi-models" }
codex-api = { workspace = true }
codex-client = { workspace = true }
codex-login = { workspace = true }
codex-model-provider = { workspace = true }
codex-protocol = { workspace = true }

[dev-dependencies]
pretty_assertions = "*"
