[package]
name = "codex-cloud-tasks-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_cloud_tasks_client"
path = "src/lib.rs"

[lints]
workspace = true

[features]
default = ["online"]
online = ["dep:codex-backend-client"]
mock = []

[dependencies]
anyhow = "*"
async-trait = "*"
chrono = { version = "*", features = ["serde"] }
diffy = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
thiserror = "*"
codex-backend-client = { path = "../backend-client", optional = true }
codex-git = { workspace = true }
