[package]
name = "codex-experimental-api-macros"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true
test = false
doctest = false

[dependencies]
proc-macro2 = "*"
quote = "*"
syn = { version = "*", features = ["full", "extra-traits"] }

[lints]
workspace = true
