[package]
name = "codex-lmstudio"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_lmstudio"
path = "src/lib.rs"


[dependencies]
codex-core = { path = "../core" }
codex-model-provider-info = { path = "../model-provider-info" }
reqwest = { version = "*", features = ["json", "stream"] }
serde_json = "*"
tokio = { version = "*", features = ["rt"] }
tracing = { version = "*", features = ["log"] }
which = "*"

[dev-dependencies]
wiremock = "*"
tokio = { version = "*", features = ["full"] }

[lints]
workspace = true
