[package]
edition = "2024"
license.workspace = true
name = "codex-network-proxy"
version = { workspace = true }

[[bin]]
name = "codex-network-proxy"
path = "src/main.rs"

[lib]
name = "codex_network_proxy"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive"] }
codex-app-server-protocol = { workspace = true }
codex-core = { workspace = true }
codex-utils-absolute-path = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"] }
url = { workspace = true }
globset = { workspace = true }
rama-core = { version = "*" }
rama-http = { version = "*" }
rama-http-backend = { version = "*", features = ["tls"] }
rama-net = { version = "*", features = ["http", "tls"] }
rama-socks5 = { version = "*" }
rama-tcp = { version = "*", features = ["http"] }
rama-tls-boring = { version = "=0.3.0-alpha.4", features = ["http"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }

[target.'cfg(target_family = "unix")'.dependencies]
rama-unix = { version = "0.3.0-alpha.4" }
