[package]
build = "build.rs"
edition.workspace = true
license.workspace = true
name = "codex-windows-sandbox"
version.workspace = true

[lib]
name = "codex_windows_sandbox"
path = "src/lib.rs"

[[bin]]
name = "codex-windows-sandbox-setup"
path = "src/bin/setup_main.rs"

[[bin]]
name = "codex-command-runner"
path = "src/bin/command_runner.rs"

[lints]
workspace = true

[dependencies]
anyhow = "*"
base64 = { workspace = true }
chrono = { version = "*", default-features = false, features = [
    "clock",
    "std",
] }
codex-utils-pty = { workspace = true }
codex-utils-absolute-path = { workspace = true }
codex-utils-string = { workspace = true }
dunce = "*"
glob = { workspace = true }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tempfile = "*"
tokio = { workspace = true, features = ["sync", "rt"] }
windows = { version = "*", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_WindowsFirewall",
    "Win32_System_Com",
    "Win32_System_Variant",
] }

[dependencies.codex-protocol]
package = "codex-protocol"
path = "../protocol"

[dependencies.rand]
default-features = false
features = ["std", "small_rng"]
version = "0.8"

[dependencies.dirs-next]
version = "*"

[target.'cfg(windows)'.dependencies.windows-sys]
features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
    "Win32_System_JobObjects",
    "Win32_System_SystemServices",
    "Win32_System_Environment",
    "Win32_System_Pipes",
    "Win32_System_WindowsProgramming",
    "Win32_System_IO",
    "Win32_System_Memory",
    "Win32_System_Kernel",
    "Win32_System_Console",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_NetworkManagement_NetManagement",
    "Win32_Networking_WinSock",
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "Win32_Security_Cryptography",
    "Win32_Security_Authentication_Identity",
    "Win32_Graphics_Gdi",
    "Win32_System_StationsAndDesktops",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Registry",
]
version = "0.52"

[dev-dependencies]
pretty_assertions = { workspace = true }

[build-dependencies]
winres = "*"

[package.metadata.cargo-shear]
ignored = ["codex-utils-pty", "tokio"]
